--- a/index.html
+++ b/index.html
@@ -18,25 +18,41 @@ PAL 0
 255,255,255
 
 ROOM 0
-0,0,b,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,b,b,b,b,b,b,b,b,b,b,b,b,b,b
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,a,a,0,0,0
-b,b,b,b,b,0,0,b,b,b,b,b,b,b,b,b
-0,0,0,0,b,0,0,b,0,0,a,a,0,0,0,0
-0,0,0,0,b,0,0,0,0,0,0,0,0,0,0,0
-a,a,a,0,b,0,0,0,0,0,0,0,0,0,0,0
-a,a,a,a,b,0,0,b,b,b,b,b,a,a,a,0
-a,a,0,0,b,0,0,0,0,0,0,b,a,a,a,0
-0,0,0,0,b,0,0,0,0,0,0,b,a,a,a,0
-0,0,0,0,b,b,b,b,b,0,0,b,0,0,0,0
-0,0,0,0,0,0,0,0,b,0,0,b,0,0,0,0
-0,0,0,a,a,0,0,0,b,0,0,b,0,0,0,0
-0,a,a,a,a,0,0,0,b,0,0,b,0,0,0,0
-0,0,a,a,0,0,0,0,b,0,0,b,0,0,0,0
-ITM 0 6,7
-ITM 0 7,7
-ITM 0 8,7
+0,0,0,0,0,0,0,0,0,0,0,0,b,b,b,0
+0,0,0,0,0,0,0,0,0,0,0,0,b,b,b,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,b,b,b,b,b,b,0,0,0,0,0
+0,0,0,0,0,b,0,0,0,0,b,0,0,0,0,0
+0,0,0,0,0,b,0,0,0,0,b,0,0,0,0,0
+0,0,0,0,0,b,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,b,0,0,0,0,b,0,0,0,0,0
+0,0,0,0,0,b,b,b,b,b,b,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,b,b,b,0,0,0,0,0,0,0,0,0,0,0,0
+0,b,0,b,0,0,0,0,0,0,0,0,0,0,0,0
+0,b,b,b,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+PAL 0
+
+ROOM 1
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,c,c,c,0
+0,0,0,0,0,0,0,0,0,0,0,0,c,c,c,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,c,c,c,c,c,0,0,0,0,0
+0,0,0,0,0,c,c,c,c,c,c,0,0,0,0,0
+0,0,0,0,0,c,c,c,c,c,c,0,0,0,0,0
+0,0,0,0,0,c,c,c,c,c,c,0,0,0,0,0
+0,0,0,0,0,c,c,c,c,c,c,0,0,0,0,0
+0,0,0,0,0,c,c,c,c,c,c,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,c,c,c,0,0,0,0,0,0,0,0,0,0,0,0
+0,c,c,c,0,0,0,0,0,0,0,0,0,0,0,0
+0,c,c,c,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 PAL 0
 
 TIL a
@@ -60,6 +76,27 @@ TIL b
 11001111
 WAL true
 
+TIL c
+00000000
+00100000
+00000010
+00000000
+00000000
+01000000
+00000100
+00000000
+
+TIL d
+10000001
+01000010
+00111100
+00100100
+00100100
+00111100
+01000010
+10000001
+WAL true
+
 SPR A
 01110000
 01111100
@@ -78,7 +115,7 @@ SPR A
 11111111
 01111111
 00111110
-POS 0 8,9
+POS 0 8,11
 
 SPR a
 00000000
@@ -5324,13 +5361,6 @@ function onkeydown(e) {
 		if( curPlayerDirection != Direction.None )
 		{
 			playerHoldToMoveTimer = 500;
-		}
-
-		/* RESTART GAME */
-		if ( e.keyCode === key.r && ( e.getModifierState("Control") || e.getModifierState("Meta") ) ) {
-			if ( confirm("Restart the game?") ) {
-				reset_cur_game();
-			}
 		}
 	}
 
