2nd room chunk, steps towards reusability

--- a/index.html
+++ b/index.html
@@ -13,78 +13,187 @@
 ! ROOM_FORMAT 1
 
 PAL 0
-0,82,204
-128,159,255
-255,255,255
+206,94,13
+170,14,87
+146,218,252
+186,122,38
+
+PAL 1
+151,43,55
+11,30,86
+51,219,93
+186,122,38
 
 ROOM 0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,b,b,b,0
-0,0,0,0,0,0,0,0,0,0,0,0,b,b,b,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,b,b,b,b,b,b,0,0,0,0,0
-0,0,0,0,0,b,0,0,0,0,b,0,0,0,0,0
-0,0,0,0,0,b,0,0,0,0,b,0,0,0,0,0
-0,0,0,0,0,b,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,b,0,0,0,0,b,0,0,0,0,0
-0,0,0,0,0,b,b,b,b,b,b,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,b,b,b,0,0,0,0,0,0,0,0,0,0,0,0
-0,b,0,b,0,0,0,0,0,0,0,0,0,0,0,0
-0,b,b,b,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,a,0,0,0,0,0,0,0,0
+0,0,l,0,0,0,0,0,0,0,0,0,0,k,0,0
+0,0,0,0,0,0,0,a,0,0,0,0,0,0,0,0
+0,0,i,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,e,f,g,0,a,a,a,a,a,a,a,a,a,a,0
+0,0,f,0,0,a,0,0,0,0,0,0,0,0,a,0
+0,0,f,0,0,a,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,a,0,0,0,0,0,0,0,0,a,0
+0,0,i,0,0,a,a,a,a,a,a,0,0,0,0,0
+0,0,f,0,0,0,0,0,0,0,a,0,0,0,a,0
+0,0,0,0,0,0,0,0,g,0,0,0,0,0,0,0
+0,0,0,0,f,h,0,f,f,h,0,0,0,0,a,0
+0,0,0,0,0,0,0,0,j,0,0,0,0,0,a,0
+0,0,0,0,0,0,0,0,0,0,a,a,a,a,a,0
+0,0,0,0,0,0,0,0,0,0,0,0,a,0,0,0
+ITM 0 8,0
+ITM 0 9,0
+ITM 0 10,0
+ITM 0 11,0
+ITM 0 12,0
+ITM 0 14,0
+ITM 0 13,0
+ITM 0 15,0
+ITM 0 11,4
+ITM 0 10,4
+ITM 0 10,3
+ITM 0 10,2
+ITM 0 11,2
+ITM 0 12,2
+ITM 0 12,4
+ITM 0 13,4
+ITM 0 14,4
+ITM 0 15,4
+ITM 0 15,3
+ITM 0 15,1
+ITM 0 15,2
+ITM 0 4,6
+ITM 0 6,6
+EXT 2,2 3 2,13
 PAL 0
 
 ROOM 1
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,c,c,c,0
-0,0,0,0,0,0,0,0,0,0,0,0,c,c,c,0
+0,0,0,0,0,0,0,b,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,c,c,c,c,c,0,0,0,0,0
-0,0,0,0,0,c,c,c,c,c,c,0,0,0,0,0
-0,0,0,0,0,c,c,c,c,c,c,0,0,0,0,0
-0,0,0,0,0,c,c,c,c,c,c,0,0,0,0,0
-0,0,0,0,0,c,c,c,c,c,c,0,0,0,0,0
-0,0,0,0,0,c,c,c,c,c,c,0,0,0,0,0
+0,0,0,0,0,0,0,b,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,c,c,c,0,0,0,0,0,0,0,0,0,0,0,0
-0,c,c,c,0,0,0,0,0,0,0,0,0,0,0,0
-0,c,c,c,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,b,b,b,b,b,b,b,b,b,b,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+0,0,0,0,0,b,0,0,0,0,0,0,0,0,b,0
+0,0,0,0,0,b,0,0,0,0,0,0,0,0,b,0
+0,0,0,0,0,b,b,b,b,b,b,0,0,0,b,0
+0,0,0,0,0,0,0,0,0,0,b,0,0,0,b,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+0,0,0,0,0,0,0,0,0,0,0,b,b,b,b,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 PAL 0
 
+ROOM 2
+0,0,0,0,0,0,0,c,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,c,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,c,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,c,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,c,0,0,0,0,0,0,0,0
+0,0,0,0,0,c,c,c,c,c,c,c,c,c,c,0
+0,0,0,0,0,c,0,0,0,0,0,0,0,0,c,0
+0,0,0,0,0,c,0,0,0,0,0,0,0,0,c,0
+0,0,0,0,0,c,0,0,0,0,0,0,0,0,c,0
+0,0,0,0,0,c,c,c,c,c,c,0,0,0,c,0
+0,0,0,0,0,0,0,0,0,0,c,0,0,0,c,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,c,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,c,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,c,0
+0,0,0,0,0,0,0,0,0,0,0,0,c,c,c,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+PAL 0
+
+ROOM 3
+0,i,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+e,f,g,0,0,0,0,0,0,0,0,0,0,0,0,0
+f,f,f,h,0,0,0,0,0,0,0,0,0,0,0,0
+m,f,j,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,n,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,a,a,a,0,0,0,0
+0,0,0,0,0,0,0,0,a,0,0,0,a,0,0,0
+0,0,0,0,0,0,0,0,a,0,0,0,a,0,0,0
+0,0,0,0,0,0,0,0,a,0,0,0,a,0,0,0
+0,0,0,0,0,0,0,0,0,a,a,a,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+PAL 1
+
+ROOM 4
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,b,b,b,0,0,0,0
+0,0,0,0,0,0,0,0,b,0,0,0,b,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,b,0,0,0,b,0,0,0
+0,0,0,0,0,0,0,0,0,b,b,b,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+PAL 1
+
+ROOM 5
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,c,c,c,0,0,0,0
+0,0,0,0,0,0,0,0,c,0,0,0,c,0,0,0
+0,0,0,0,0,0,0,0,c,0,0,0,c,0,0,0
+0,0,0,0,0,0,0,0,c,0,0,0,c,0,0,0
+0,0,0,0,0,0,0,0,0,c,c,c,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+PAL 1
+
 TIL a
-00000000
-00000000
-01111100
-11111111
-11111111
-11110110
-01101100
-00000000
+01101110
+10111011
+01101101
+10111111
+00110010
+11111110
+11110111
+11011111
+WAL true
 
 TIL b
-11001111
-00000000
-11111001
-11111001
-11111001
-00000000
-11001111
-11001111
+01001101
+10111010
+01100101
+10011010
+11100110
+00101100
+01010010
+10101001
 WAL true
 
 TIL c
-00000000
-00100000
-00000010
-00000000
-00000000
-01000000
-00000100
-00000000
+01000100
+10000000
+00100010
+00000101
+00010000
+00100010
+00001000
+10000001
+WAL true
 
 TIL d
 10000001
@@ -97,25 +206,161 @@ TIL d
 10000001
 WAL true
 
-SPR A
-01110000
+TIL e
+00000001
+00000010
+00000101
+00001010
+00010111
+00101010
+01011101
+10101010
+COL 3
+
+TIL f
+01010101
+10101010
+01011101
+10100110
+01100101
+10111010
+01010101
+11101110
+COL 3
+
+TIL g
+00000000
+10000000
+01000000
+10100000
+01010000
+11101000
+01010100
+10111010
+COL 3
+
+TIL h
+00000000
+10000000
+01000000
+10100000
+11010000
+10100000
+01000000
+10000000
+COL 3
+
+TIL i
+00000000
+00000000
+00000000
+00000000
+00010000
+00101000
+01010100
+10111010
+COL 3
+
+TIL j
+01010101
+10111010
+01010100
+11101000
+01010000
+10100000
+01000000
+10000000
+COL 3
+
+TIL k
+00000000
 01111100
-11111111
-11110110
-11111100
-11111000
-11111111
-01111100
+10000010
+10111010
+10011010
+01000010
+00111100
+00000000
 >
+00000000
+01111100
+10000010
+10101010
+10110010
+10000100
+01111000
+00000000
+
+TIL l
+00000000
+01111110
+01000010
+01000010
+01000010
+01001010
+11000011
+11000011
+NAME door
+
+TIL m
+01010101
+10101010
+01011101
+00100110
+00010101
+00001010
+00000101
+00000010
+COL 3
+
+TIL n
+01010101
+10101010
+01011100
+00101000
+00010000
+00000000
+00000000
+00000000
+COL 3
+
+SPR A
 00111100
 01111110
 01110111
 11111111
 11111100
+11111000
+00110000
+00101000
+>
+00011100
+01111110
+01110111
+11111110
 11111111
+11111000
+00110000
+00101000
+>
+00011000
+00111100
 01111111
-00111110
-POS 0 8,11
+11110110
+11111100
+11111111
+01111110
+01001000
+>
+00011100
+01111110
+01111111
+11110110
+11111111
+11111100
+01110000
+01001000
+POS 0 2,12
 
 SPR a
 00000000
@@ -132,33 +377,27 @@ ITM 0
 00000000
 00000000
 00000000
-00111100
-01100100
-00100100
+00111000
 00011000
 00000000
+00000000
+00000000
+>
+00000000
+00000000
+00000000
+00101000
+00110000
+00000000
+00000000
+00000000
 NAME tea
-DLG ITM_0
 
 DLG SPR_0
 I'm a cat
 
-DLG ITM_0
-"""
-{sequence
-  - hello
-  - {alert}
-}{
-  - {item "0"} == 1 ?
-
-  - else ?
-
-}
-"""
-
 VAR a
 42
-
 
 </script>
 
@@ -2702,23 +2941,16 @@ var Interpreter = function() {
 
 	// TODO -- maybe this should return a string instead othe actual script??
 	this.Compile = function(scriptName, scriptStr) {
-		
-		// console.log("COMPILE");
 		var script = parser.Parse( scriptStr );
 		
 		env.SetScript( scriptName, script );
 	}
 
 	this.Run = function(scriptName, exitHandler) { // Runs pre-compiled script
-		// console.log("RUN");
 		env.GetScript( scriptName )
 			.Eval( env, function() { if(exitHandler!=null) exitHandler(); } );
-
-		// console.log("SERIALIZE!!!!");
-		// console.log( env.GetScript( scriptName ).Serialize() );
 	}
 	this.Interpret = function(scriptStr, exitHandler) { // Compiles and runs code immediately
-		// console.log("INTERPRET");
 		var script = parser.Parse( scriptStr );
 		script.Eval( env, function() { if(exitHandler!=null) exitHandler(); } );
 	}
@@ -2823,11 +3055,8 @@ var Utils = function() {
 
 /* BUILT-IN FUNCTIONS */ // TODO: better way to encapsulate these?
 function sayFunc(environment,parameters,onReturn) {
-	// console.log("SAY FUNC");
-	// console.log(parameters);
 	if( parameters[0] != undefined && parameters[0] != null ) {
-		// console.log(parameters[0]);
-		// console.log(parameters[0].toString());
+		
 		// var textStr = parameters[0].toString();
 		var textStr = "" + parameters[0];
 		// console.log(textStr);
@@ -2912,9 +3141,6 @@ function setExp(environment,left,right,onReturn) {
 	});
 }
 function equalExp(environment,left,right,onReturn) {
-	// console.log("EVAL EQUAL");
-	// console.log(left);
-	// console.log(right);
 	right.Eval(environment,function(rVal){
 		left.Eval(environment,function(lVal){
 			onReturn( lVal === rVal );
@@ -3123,10 +3349,6 @@ var BlockNode = function(mode, doIndentFirstLine) {
 	this.Serialize = function(depth) {
 		if(depth === undefined) depth = 0;
 
-		console.log("SERIALIZE BLOCK!!!");
-		console.log(depth);
-		console.log(doIndentFirstLine);
-
 		var str = "";
 		var lastNode = null;
 		if (this.mode === BlockMode.Code) str += "{"; // todo: increase scope of Sym?
@@ -3188,8 +3410,6 @@ var FuncNode = function(name,arguments) {
 
 		if( this.onEnter != null ) this.onEnter();
 
-		// console.log("FUNC");
-		// console.log(this.arguments);
 		var argumentValues = [];
 		var i = 0;
 		function evalArgs(arguments,done) {
@@ -3269,7 +3489,6 @@ var VarNode = function(name) {
 	this.name = name;
 
 	this.Eval = function(environment,onReturn) {
-		// console.log("EVAL " + this.name + " " + environment.HasVariable(this.name) + " " + environment.GetVariable(this.name));
 		if( environment.HasVariable(this.name) )
 			onReturn( environment.GetVariable( this.name ) );
 		else
@@ -3565,8 +3784,7 @@ var Parser = function(env) {
 		this.MatchAhead = function(str) {
 			// console.log(str);
 			str = "" + str; // hack to turn single chars into strings
-			// console.log(str);
-			// console.log(str.length);
+		
 			for(var j = 0; j < str.length; j++) {
 				if( i + j >= sourceStr.length )
 					return false;
@@ -5713,8 +5931,6 @@ function parseWorld(file) {
 	if (player().room != null) {
 		curRoom = player().room;
 	}
-
-	console.log(names);
 }
 
 //TODO this is in progress and doesn't support all features
@@ -5921,9 +6137,6 @@ function isExitValid(e) {
 
 function placeSprites() {
 	for (id in spriteStartLocations) {
-		//console.log(id);
-		//console.log( spriteStartLocations[id] );
-		//console.log(sprite[id]);
 		sprite[id].room = spriteStartLocations[id].room;
 		sprite[id].x = spriteStartLocations[id].x;
 		sprite[id].y = spriteStartLocations[id].y;
@@ -5996,7 +6209,6 @@ function parseRoom(lines, i) {
 	}
 
 	while (i < lines.length && lines[i].length > 0) { //look for empty line
-		// console.log(getType(lines[i]));
 		if (getType(lines[i]) === "SPR") {
 			/* NOTE SPRITE START LOCATIONS */
 			var sprId = getId(lines[i]);
@@ -6306,9 +6518,6 @@ function parseItem(lines, i) {
 		name : name
 	};
 
-	// console.log("ITM " + id);
-	// console.log(item[id]);
-
 	return i;
 }
 
@@ -6345,12 +6554,10 @@ function parseDrawingCore(lines, i, drwId) {
 		}
 	}
 
-	//console.log(imageStore.source[drwId]);
 	return i;
 }
 
 function renderImages() {
-	console.log(" -- RENDER IMAGES -- ");
 
 	//init image store
 	for (pal in palette) {
@@ -6378,7 +6585,6 @@ function renderImages() {
 }
 
 function renderImageForAllPalettes(drawing) {
-	console.log("RENDER IMAGE");
 	for (pal in palette) {
 		// console.log(pal);
 
@@ -6387,21 +6593,15 @@ function renderImageForAllPalettes(drawing) {
 
 		// slightly hacky initialization of image store for palettes with more than 3 colors ~~~ SECRET FEATURE DO NOT USE :P ~~~
 		if(imageStore.render[pal][colStr] === undefined || imageStore.render[pal][colStr] === null) {
-			console.log("UNDEFINED " + colStr);
 			imageStore.render[pal][colStr] = {};
 		}
-
-		// console.log(drawing);
-		// console.log(drawing.drw);
-		// console.log(imageStore);
 
 		var imgSrc = imageStore.source[ drawing.drw ];
 
 		if ( imgSrc.length <= 1 ) {
 			// non-animated drawing
 			var frameSrc = imgSrc[0];
-			console.log(drawing);
-			console.log(imageStore);
+			
 			imageStore.render[pal][colStr][drawing.drw] = imageDataFromImageSource( frameSrc, pal, col );
 		}
 		else {
@@ -6418,8 +6618,6 @@ function renderImageForAllPalettes(drawing) {
 }
 
 function imageDataFromImageSource(imageSource, pal, col) {
-	//console.log(imageSource);
-
 	var img = ctx.createImageData(tilesize*scale,tilesize*scale);
 	for (var y = 0; y < tilesize; y++) {
 		for (var x = 0; x < tilesize; x++) {
@@ -6540,10 +6738,8 @@ function getTileImage(t,palId,frameIndex) {
 
 	if ( t.animation.isAnimated ) {
 		if (frameIndex != null) { // use optional provided frame index
-			// console.log("GET TILE " + frameIndex);
 			drwId += "_" + frameIndex;
-		}
-		else { // or the one bundled with the tile
+		} else { // or the one bundled with the tile
 			drwId += "_" + t.animation.frameIndex;
 		}
 	}
@@ -6585,9 +6781,7 @@ function getItemImage(itm,palId,frameIndex) { //aren't these all the same????
 			drwId += "_" + itm.animation.frameIndex;
 		}
 	}
-
-	// console.log(imageStore.render[ palId ][ itm.col ]);
-	// console.log(imageStore.render[ palId ][ itm.col ][ drwId ]);
+	
 	return imageStore.render[ palId ][ itm.col ][ drwId ];
 }
 
