--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ PAL 1
 151,43,55
 11,30,86
 51,219,93
-186,122,38
+130,20,38
 130,130,130
 180,180,180
 230,230,230
@@ -38,7 +38,7 @@ ROOM 0
 0,0,i,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,e,f,g,0,a,a,a,a,a,a,a,a,a,a,0
 0,0,f,0,0,a,0,0,0,0,0,0,0,0,a,0
-0,0,f,0,0,a,0,0,0,0,0,0,0,0,0,0
+0,0,f,0,0,a,0,0,0,0,0,0,0,l,0,0
 0,0,0,0,0,a,0,0,0,0,0,0,0,0,a,0
 0,0,i,0,0,a,a,a,a,a,a,0,0,0,0,0
 0,0,f,0,0,0,0,0,0,0,a,0,0,0,a,0
@@ -71,6 +71,7 @@ ITM 0 15,2
 ITM 0 4,6
 ITM 0 6,6
 EXT 2,2 3 2,13
+EXT 13,7 6 3,11
 PAL 0
 
 ROOM 1
@@ -168,39 +169,110 @@ ROOM 5
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 PAL 1
 
+ROOM 6
+0,e,f,f,f,f,f,f,f,f,f,f,f,f,f,f
+0,a,a,a,a,a,a,a,a,a,a,a,a,a,a,f
+0,a,f,0,0,0,0,0,0,0,0,0,0,0,a,f
+0,a,f,0,0,0,0,0,0,0,0,0,0,0,a,f
+0,a,f,f,p,f,f,f,f,f,0,0,0,0,a,f
+0,a,a,a,a,u,q,a,a,f,0,0,s,g,a,f
+0,0,0,0,0,0,f,0,a,f,0,e,g,r,a,j
+0,0,0,0,0,0,f,0,a,f,0,a,f,h,0,e
+0,0,0,0,0,0,f,0,a,f,0,a,j,0,e,f
+0,e,f,f,p,f,f,f,a,f,0,0,0,0,a,f
+0,a,a,a,a,a,a,a,a,j,0,0,0,0,a,f
+0,a,f,0,0,0,0,0,0,0,0,0,0,0,a,f
+0,a,f,0,0,0,0,0,0,0,0,0,0,0,a,f
+0,a,f,f,f,f,f,f,f,f,f,f,f,f,a,f
+0,a,a,a,a,a,a,a,a,a,a,a,a,a,a,j
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+ITM 0 3,12
+ITM 0 5,12
+ITM 0 7,12
+ITM 0 9,12
+ITM 0 11,12
+ITM 0 12,11
+ITM 0 12,9
+ITM 0 12,7
+ITM 0 12,5
+ITM 0 12,3
+ITM 0 10,3
+ITM 0 8,3
+ITM 0 6,3
+ITM 0 4,3
+PAL 1
+
+ROOM 7
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,b,b,b,b,b,b,b,b,b,b,b,b,b,0,0
+0,b,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+0,b,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+0,b,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+0,b,b,0,b,t,b,b,b,0,0,0,0,0,b,0
+0,0,0,0,0,0,0,0,b,0,0,0,0,0,b,0
+0,0,0,0,0,0,0,0,b,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,b,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,b,0,0,0,0,0,b,0
+0,b,b,0,b,b,b,b,b,0,0,0,0,0,b,0
+0,b,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+0,b,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+0,b,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+0,b,b,b,b,b,b,b,b,b,b,b,b,b,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+PAL 1
+
+ROOM 8
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,c,c,c,c,c,c,c,c,c,c,c,c,0,0,0
+0,c,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,c,0,0,0,0,0,0,0,0,0,0,0,0,c,0
+0,c,0,0,0,0,0,0,0,0,0,0,0,0,c,0
+0,c,c,c,c,c,c,c,c,0,0,0,0,0,c,0
+0,0,0,0,c,0,0,0,c,0,0,0,0,0,c,0
+0,0,0,0,c,0,0,0,c,0,0,c,0,0,0,0
+0,0,0,0,c,0,0,0,c,0,0,c,0,0,0,0
+0,0,0,0,c,0,0,0,c,0,0,0,0,0,c,0
+0,c,c,c,c,c,c,c,c,0,0,0,0,0,c,0
+0,c,0,0,0,0,0,0,0,0,0,0,0,0,c,0
+0,c,0,0,0,0,0,0,0,0,0,0,0,0,c,0
+0,c,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,c,c,c,c,c,c,c,c,c,c,c,c,0,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+PAL 1
+
 TIL a
-01101111
-10111011
-01111101
-10111011
-01111110
-11101110
-10110111
-11011101
+01010101
+10101010
+01010101
+10101010
+01010101
+10101010
+01010101
+10101010
 WAL true
 COL 4
 
 TIL b
-01101111
-10111011
-11101110
-10110111
-11011101
-01111101
-10111011
-01111110
+01010101
+10101010
+01010101
+10101010
+01010101
+10101010
+01010101
+10101010
 WAL true
 COL 5
 
 TIL c
-10111011
-11101110
-10110111
-01101111
-01111101
-10111011
-01111110
-11011101
+01010101
+10101010
+01010101
+10101010
+01010101
+10101010
+01010101
+10101010
 WAL true
 COL 6
 
@@ -344,6 +416,78 @@ TIL o
 11101010
 COL 3
 
+TIL p
+01010100
+10101000
+11010000
+10100000
+01000001
+10000011
+00000101
+00001010
+COL 3 
+
+TIL q
+01010101
+10101010
+11010101
+11101010
+11110101
+11111010
+11111101
+11111110
+NAME a-shadow
+WAL true
+COL 4
+
+TIL r
+01010101
+10101010
+01011101
+00101010
+00010101
+00001010
+00000101
+00000010
+COL 3 
+
+TIL s
+00000001
+00000010
+00000101
+00001010
+00010101
+00001010
+00000101
+00000010
+COL 3 
+
+TIL t
+01010101
+10101010
+11010101
+11101010
+11110101
+11111010
+11111101
+11111110
+NAME b-shadow
+WAL true
+COL 5
+
+TIL u
+11111111
+01111111
+10111111
+01011111
+10101111
+01010111
+10101011
+01010101
+NAME a-shadow-2
+WAL true
+COL 4
+
 SPR A
 00111100
 01111110
@@ -411,9 +555,7 @@ ITM 0
 00000000
 00000000
 00000000
-NAME tea
-
-	
+NAME collect
 
 </script>
 
