--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ ROOM 0
 0,0,0,0,n,0,0,0,j,0,e,f,f,f,a,f
 0,0,0,0,0,0,0,0,0,0,a,a,a,a,a,j
 0,0,0,0,0,0,0,0,0,0,0,0,a,j,0,0
+ITM 3 8,0
 ITM 2 6,6
 ITM 1 4,6
 ITM 0 0,6
@@ -56,7 +57,6 @@ ITM 0 15,1
 ITM 2 14,0
 ITM 0 12,0
 ITM 1 10,0
-ITM 0 8,0
 ITM 1 12,4
 ITM 0 10,4
 ITM 1 10,2
@@ -106,7 +106,7 @@ PAL 0
 
 ROOM 3
 0,e,f,f,0,0,f,0,0,0,0,0,0,0,0,0
-0,a,j,f,0,0,f,0,0,0,0,0,0,0,0,0
+0,a,j,f,0,0,f,0,0,0,0,0,0,0,l,0
 0,0,0,f,f,f,f,0,0,0,0,0,i,0,0,0
 0,0,0,0,e,f,j,0,0,0,i,e,f,0,0,0
 0,0,0,0,a,j,0,0,0,e,f,f,f,f,0,0
@@ -128,13 +128,14 @@ ITM 2 12,5
 ITM 0 12,9
 ITM 0 8,9
 ITM 1 3,2
-ITM 0 3,12
+ITM 3 3,12
 ITM 2 7,12
 ITM 1 10,11
 ITM 0 5,10
 ITM 0 1,10
 ITM 1 14,11
 ITM 0 4,1
+EXT 14,1 0 2,12
 PAL 1
 
 ROOM 4
@@ -178,7 +179,7 @@ PAL 1
 ROOM 6
 0,e,f,f,f,f,f,f,f,f,f,f,f,f,f,f
 0,a,a,a,a,a,a,a,a,a,a,a,a,a,a,f
-0,a,f,0,0,0,e,f,f,f,f,0,0,0,a,f
+0,a,f,0,0,0,e,f,f,f,f,0,0,l,a,f
 0,a,f,0,0,e,f,j,e,f,f,0,0,0,a,f
 0,a,f,f,f,f,j,e,f,f,f,0,0,0,a,f
 0,a,a,a,a,a,f,a,a,f,f,0,0,f,a,f
@@ -199,13 +200,14 @@ ITM 0 9,12
 ITM 1 11,12
 ITM 2 12,11
 ITM 0 12,9
-ITM 1 12,7
+ITM 3 12,7
 ITM 2 12,5
 ITM 0 12,3
-ITM 0 10,3
-ITM 2 8,3
-ITM 0 6,3
+ITM 3 10,3
+ITM 3 8,3
+ITM 3 6,3
 ITM 1 4,3
+EXT 13,2 0 2,12
 PAL 1
 
 ROOM 7
@@ -630,7 +632,28 @@ ITM 2
 11111100
 10001110
 01111101
-NAME collect2
+NAME collect3
+COL 3
+
+ITM 3
+01010101
+01110010
+10101001
+11111010
+11111001
+10001010
+01111010
+01010101
+>
+01010101
+10101010
+00000001
+01111010
+10101001
+11111100
+10001110
+01111101
+NAME collect-shadow
 COL 3
 
 </script>
