lookin real good

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ PAL 1
 
 ROOM 0
 0,0,0,0,0,0,0,e,f,f,0,0,0,0,0,0
-0,0,0,0,0,0,0,a,j,f,0,0,0,0,0,0
+0,0,0,0,0,x,0,a,j,f,0,0,0,0,0,0
 0,0,l,0,0,0,0,e,f,f,0,0,0,k,0,0
 0,0,0,0,0,0,0,a,j,f,0,0,0,0,0,0
 0,0,i,0,0,e,f,f,f,f,f,f,f,f,f,f
@@ -45,7 +45,7 @@ ROOM 0
 0,0,0,0,i,0,0,0,g,0,0,0,0,0,e,f
 0,0,0,s,f,h,0,f,f,h,0,0,0,0,a,f
 0,0,0,0,n,0,0,0,j,0,e,f,f,f,a,f
-0,0,0,0,0,0,0,0,0,0,a,a,a,a,a,j
+0,x,0,0,0,0,0,0,0,0,a,a,v,a,a,j
 0,0,0,0,0,0,0,0,0,0,0,0,a,j,0,0
 ITM 3 8,0
 ITM 2 6,6
@@ -109,25 +109,21 @@ ROOM 3
 0,a,j,f,0,0,f,0,0,0,0,0,0,0,l,0
 0,0,0,f,f,f,f,0,0,0,0,0,i,0,0,0
 0,0,0,0,e,f,j,0,0,0,i,e,f,0,0,0
-0,0,0,0,a,j,0,0,0,e,f,f,f,f,0,0
+0,x,0,0,a,j,0,0,0,e,f,f,f,f,0,0
 0,0,0,0,0,0,0,0,e,a,a,a,f,f,f,h
-0,0,0,0,0,0,0,0,a,f,o,f,a,f,j,0
-0,0,0,0,0,0,0,0,a,f,f,f,a,f,h,0
-0,0,0,0,0,0,0,0,a,f,f,f,a,j,0,0
+0,0,0,0,0,0,0,0,a,f,p,f,a,p,j,0
+0,0,e,g,0,0,x,0,a,f,f,f,a,f,h,0
+0,0,w,j,0,0,0,0,a,f,f,f,a,j,0,0
 0,0,0,0,0,0,0,0,0,a,a,a,j,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,e,f,0,e,f,0,e,f,0,0,0,0,0,0
 0,e,f,j,e,f,j,e,f,j,0,0,0,0,0,0
-0,a,j,0,a,j,0,a,j,0,0,0,0,0,0,0
+0,a,j,0,a,j,0,a,j,0,0,0,0,x,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-ITM 0 9,7
-ITM 1 11,7
 ITM 1 8,5
-ITM 2 12,5
 ITM 0 12,9
 ITM 0 8,9
-ITM 1 3,2
 ITM 3 3,12
 ITM 2 7,12
 ITM 1 10,11
@@ -135,6 +131,10 @@ ITM 0 5,10
 ITM 0 1,10
 ITM 1 14,11
 ITM 0 4,1
+ITM 3 3,2
+ITM 3 12,5
+ITM 3 9,7
+ITM 3 11,7
 EXT 14,1 0 2,12
 PAL 1
 
@@ -177,75 +177,77 @@ ROOM 5
 PAL 1
 
 ROOM 6
-0,e,f,f,f,f,f,f,f,f,f,f,f,f,f,f
-0,a,a,a,a,a,a,a,a,a,a,a,a,a,a,f
-0,a,f,0,0,0,e,f,f,f,f,0,0,l,a,f
-0,a,f,0,0,e,f,j,e,f,f,0,0,0,a,f
-0,a,f,f,f,f,j,e,f,f,f,0,0,0,a,f
-0,a,a,a,a,a,f,a,a,f,f,0,0,f,a,f
-0,0,0,0,e,f,f,0,a,f,f,e,f,f,a,j
-0,0,0,0,a,f,f,0,a,f,f,a,f,0,0,e
-0,0,0,0,a,p,f,f,a,f,f,a,j,0,e,f
+a,f,f,0,0,0,0,0,0,0,0,0,0,0,a,f
+a,p,f,0,0,0,0,0,0,0,x,0,0,0,a,f
+a,f,f,0,0,0,0,0,0,0,0,0,0,l,a,f
+a,f,f,f,f,f,f,f,f,f,f,0,0,0,a,f
+a,f,f,f,f,f,f,p,f,f,f,0,0,0,a,f
+a,a,a,a,a,a,j,a,a,f,f,f,f,0,a,f
+e,f,j,0,e,f,h,0,a,f,f,0,f,0,a,j
+a,j,0,e,f,j,0,x,a,f,f,0,f,0,0,e
+0,0,0,a,j,0,0,0,a,f,f,0,f,f,f,f
 0,e,f,f,f,f,f,f,a,f,j,0,0,0,a,f
-0,a,a,a,a,a,a,a,a,j,0,0,0,0,a,f
-0,a,f,0,0,0,0,0,0,0,0,0,0,0,a,f
-0,a,f,0,0,0,0,0,0,0,0,0,0,0,a,f
-0,a,f,f,f,f,f,f,f,f,f,f,f,f,a,f
-0,a,a,a,a,a,a,a,a,a,a,a,a,a,a,j
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-ITM 1 3,12
-ITM 0 5,12
-ITM 1 7,12
-ITM 0 9,12
-ITM 1 11,12
+a,a,a,a,a,a,a,a,a,j,0,0,0,0,a,f
+a,f,f,0,x,0,0,0,0,0,0,0,0,0,a,f
+a,p,f,0,0,0,0,0,0,0,0,0,0,0,a,f
+a,f,f,0,0,0,0,0,0,0,0,0,0,0,a,f
+a,f,f,f,f,f,f,f,f,f,f,f,f,f,a,f
+a,f,f,p,f,f,p,f,f,p,f,f,f,f,a,f
 ITM 2 12,11
-ITM 0 12,9
+ITM 3 12,5
 ITM 3 12,7
-ITM 2 12,5
-ITM 0 12,3
-ITM 3 10,3
-ITM 3 8,3
-ITM 3 6,3
-ITM 1 4,3
+ITM 2 4,2
+ITM 2 8,2
+ITM 1 12,2
+ITM 1 6,2
+ITM 0 10,2
+ITM 0 0,8
+ITM 1 6,7
+ITM 1 12,9
+ITM 0 4,13
+ITM 0 10,13
+ITM 1 8,13
+ITM 2 6,13
+ITM 2 12,13
 EXT 13,2 0 2,12
 PAL 1
 
 ROOM 7
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,b,b,b,b,b,b,b,b,b,b,b,b,b,0,0
-0,b,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-0,b,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-0,b,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-0,b,b,b,b,b,0,b,b,0,0,0,0,0,b,0
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+b,b,b,b,b,b,0,b,b,0,0,0,0,0,b,0
 0,0,0,0,0,0,0,0,b,0,0,0,0,0,b,0
-0,0,0,0,b,0,0,0,b,0,0,0,0,0,0,0
-0,0,0,0,b,0,0,0,b,0,0,0,0,0,0,0
+b,0,0,0,0,0,0,0,b,0,0,0,0,0,0,0
+0,0,0,b,0,0,0,0,b,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,b,0,0,0,0,0,b,0
-0,b,b,b,b,b,0,b,b,0,0,0,0,0,b,0
-0,b,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-0,b,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-0,b,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-0,b,b,b,b,b,b,b,b,b,b,b,b,b,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+b,b,b,b,b,b,0,b,b,0,0,0,0,0,b,0
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
+b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
 PAL 1
 
 ROOM 8
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,c,c,c,c,c,0,0,0,0,0,0,0
-0,0,0,0,c,0,0,0,c,0,0,0,0,0,0,0
-0,0,0,0,c,0,0,0,c,0,0,c,0,0,0,0
-0,0,0,0,c,0,0,0,c,0,0,c,0,0,0,0
-0,0,0,0,c,0,0,0,c,0,0,0,0,0,0,0
-0,0,0,0,c,c,c,c,c,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+c,c,c,c,c,c,c,c,c,0,0,0,0,0,0,0
+0,0,0,0,0,0,0,0,c,0,0,0,0,0,0,0
+c,0,0,0,0,0,0,0,c,c,c,c,0,0,0,0
+0,0,0,c,0,0,0,0,c,0,0,c,0,0,0,0
+0,0,0,0,0,0,0,0,c,0,0,c,0,0,0,0
+c,c,c,c,c,c,c,c,c,0,0,c,c,c,c,0
+c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 PAL 1
 
 TIL a
@@ -256,7 +258,8 @@ TIL a
 01010101
 10101010
 01010101
-10101010
+11111111
+NAME floor-1-shadow
 WAL true
 COL 4
 
@@ -269,6 +272,7 @@ TIL b
 10101010
 01010101
 10101010
+NAME floor-2
 WAL true
 COL 5
 
@@ -307,13 +311,13 @@ TIL e
 COL 3
 
 TIL f
-00010101
-10101010
+01010101
+10100010
 01010101
 10101010
 01010101
 10101010
-01010101
+01010100
 10101010
 COL 3
 
@@ -425,13 +429,13 @@ TIL o
 COL 3
 
 TIL p
-01010100
+01010001
 10101000
-11010000
+01000000
 10100000
-01000001
-10000011
-00000101
+00000000
+10000010
+00000001
 00001010
 COL 3
 
@@ -495,6 +499,41 @@ TIL u
 NAME a-shadow-2
 WAL true
 COL 4
+
+TIL v
+01010101
+10101010
+01010101
+10101010
+01010101
+10101010
+01010101
+10101010
+NAME floor-1-plain
+WAL true
+COL 4
+
+TIL w
+00010101
+00101010
+00000101
+00001010
+00000001
+00000000
+00000000
+00000000
+COL 3
+
+TIL x
+00000000
+00000000
+00000000
+00110000
+00010000
+00110100
+00111010
+00000000
+COL 3
 
 SPR A
 00111100
@@ -638,19 +677,19 @@ COL 3
 ITM 3
 01010101
 01110010
-10101001
+10101101
 11111010
-11111001
+11111101
 10001010
 01111010
 01010101
 >
 01010101
-10101010
-00000001
+10100010
+01010101
 01111010
-10101001
-11111100
+10101101
+11111010
 10001110
 01111101
 NAME collect-shadow
