wtf blue crazy rotations

--- a/index.html
+++ b/index.html
@@ -13,677 +13,222 @@
 ! ROOM_FORMAT 1
 
 PAL 0
-206,94,13
-170,14,87
-146,218,252
-146,52,4
-130,130,130
-180,180,180
-230,230,230
-
-PAL 1
-151,43,55
-11,30,86
-51,219,93
-110,20,28
-130,130,130
-180,180,180
-230,230,230
+0,82,204
+128,159,255
+255,255,255
 
 ROOM 0
-0,0,0,0,0,0,0,e,f,f,0,0,0,0,0,0
-0,0,0,0,0,x,0,a,j,f,0,0,0,0,0,0
-0,0,l,0,0,0,0,e,f,f,0,0,0,k,0,0
-0,0,0,0,0,0,0,a,j,f,0,0,0,0,0,0
-0,0,i,0,0,e,f,f,f,f,f,f,f,f,f,f
-0,e,f,g,0,a,a,a,a,a,a,a,a,a,a,f
-0,0,f,0,0,a,f,0,0,0,0,0,0,0,a,j
-0,0,0,0,0,a,f,0,0,0,0,0,0,l,e,f
-0,0,i,0,0,a,f,f,f,f,f,f,0,0,a,j
-0,s,f,h,0,a,a,a,a,a,a,f,0,0,e,f
-0,0,n,0,0,0,0,0,0,0,a,j,0,0,a,j
-0,0,0,0,i,0,0,0,g,0,0,0,0,0,e,f
-0,0,0,s,f,h,0,f,f,h,0,0,0,0,a,f
-0,0,0,0,n,0,0,0,j,0,e,f,f,f,a,f
-0,x,0,0,0,0,0,0,0,0,a,a,v,a,a,j
-0,0,0,0,0,0,0,0,0,0,0,0,a,j,0,0
-ITM 3 8,0
-ITM 2 6,6
-ITM 1 4,6
-ITM 0 0,6
-ITM 1 14,4
-ITM 0 15,3
-ITM 0 15,1
-ITM 2 14,0
-ITM 0 12,0
-ITM 1 10,0
-ITM 1 12,4
-ITM 0 10,4
-ITM 1 10,2
-ITM 0 9,3
-ITM 2 12,2
-EXT 2,2 3 2,13
-EXT 13,7 6 3,11
-PAL 0
-
-ROOM 1
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,b,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,b,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,b,b,b,b,b,b,b,b,b,b,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-0,0,0,0,0,b,0,0,0,0,0,0,0,0,b,0
-0,0,0,0,0,b,0,0,0,0,0,0,0,0,b,0
-0,0,0,0,0,b,b,b,b,b,b,0,0,0,b,0
-0,0,0,0,0,0,0,0,0,0,b,0,0,0,b,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-0,0,0,0,0,0,0,0,0,0,0,b,b,b,b,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-PAL 0
-
-ROOM 2
-0,0,0,0,0,0,0,c,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,c,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,c,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,c,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,c,0,0,0,0,0,0,0,0
-0,0,0,0,0,c,c,c,c,c,c,c,c,c,c,0
-0,0,0,0,0,c,0,0,0,0,0,0,0,0,c,0
-0,0,0,0,0,c,0,0,0,0,0,0,0,0,c,0
-0,0,0,0,0,c,0,0,0,0,0,0,0,0,c,0
-0,0,0,0,0,c,c,c,c,c,c,0,0,0,c,0
-0,0,0,0,0,0,0,0,0,0,c,0,0,0,c,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,c,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,c,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,c,0
-0,0,0,0,0,0,0,0,0,0,0,0,c,c,c,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-PAL 0
-
-ROOM 3
-0,e,f,f,0,0,f,0,0,0,0,0,0,0,0,0
-0,a,j,f,0,0,f,0,0,0,0,0,0,0,l,0
-0,0,0,f,f,f,f,0,0,0,0,0,i,0,0,0
-0,0,0,0,e,f,j,0,0,0,i,e,f,0,0,0
-0,x,0,0,a,j,0,0,0,e,f,f,f,f,0,0
-0,0,0,0,0,0,0,0,e,a,a,a,f,f,f,h
-0,0,0,0,0,0,0,0,a,f,p,f,a,p,j,0
-0,0,e,g,0,0,x,0,a,f,f,f,a,f,h,0
-0,0,w,j,0,0,0,0,a,f,f,f,a,j,0,0
-0,0,0,0,0,0,0,0,0,a,a,a,j,0,0,0
+0,0,0,0,0,l,0,j,j,j,0,0,0,0,0,0
+0,0,0,0,0,k,0,j,j,j,0,0,0,0,0,0
+0,0,0,0,0,g,h,b,b,j,0,0,0,0,0,0
+0,0,0,0,0,m,g,c,d,j,0,0,0,0,0,0
+0,0,0,0,0,n,i,e,b,j,0,0,0,0,0,0
+0,0,0,0,0,l,p,b,a,b,0,0,0,0,0,0
+0,0,0,0,0,l,o,a,b,b,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,e,f,0,e,f,0,e,f,0,0,0,0,0,0
-0,e,f,j,e,f,j,e,f,j,0,0,0,0,0,0
-0,a,j,0,a,j,0,a,j,0,0,0,0,x,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-ITM 1 8,5
-ITM 0 12,9
-ITM 0 8,9
-ITM 3 3,12
-ITM 2 7,12
-ITM 1 10,11
-ITM 0 5,10
-ITM 0 1,10
-ITM 1 14,11
-ITM 0 4,1
-ITM 3 3,2
-ITM 3 12,5
-ITM 3 9,7
-ITM 3 11,7
-EXT 14,1 0 2,12
-PAL 1
-
-ROOM 4
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,b,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,b,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,b,b,b,0,0,0,0
-0,0,0,0,0,0,0,0,b,0,0,0,b,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,b,0,0,0,b,0,0,0
-0,0,0,0,0,0,0,0,0,b,b,b,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,b,0,0,b,0,0,b,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-PAL 1
-
-ROOM 5
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,c,c,c,c,0,0,0,0,0,0,0,0,0,0,0
-0,c,0,0,c,0,0,0,0,0,0,0,0,0,0,0
-0,c,0,0,c,0,0,0,0,0,0,0,0,0,0,0
-0,c,c,c,c,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,c,0,c,0,0,0,0
-0,0,0,0,0,0,0,0,c,0,0,0,c,0,0,0
-0,0,0,0,0,0,0,0,c,0,0,0,c,0,0,0
-0,0,0,0,0,0,0,0,c,0,0,0,c,0,0,0
-0,0,0,0,0,0,0,0,0,c,0,c,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,c,0,0,c,0,0,c,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-PAL 1
-
-ROOM 6
-a,f,f,0,0,0,0,0,0,0,0,0,0,0,a,f
-a,p,f,0,0,0,0,0,0,0,x,0,0,0,a,f
-a,f,f,0,0,0,0,0,0,0,0,0,0,l,a,f
-a,f,f,f,f,f,f,f,f,f,f,0,0,0,a,f
-a,f,f,f,f,f,f,p,f,f,f,0,0,0,a,f
-a,a,a,a,a,a,j,a,a,f,f,f,f,0,a,f
-e,f,j,0,e,f,h,0,a,f,f,0,f,0,a,j
-a,j,0,e,f,j,0,x,a,f,f,0,f,0,0,e
-0,0,0,a,j,0,0,0,a,f,f,0,f,f,f,f
-e,f,f,f,f,f,f,f,a,f,j,0,0,0,a,f
-a,a,a,a,a,a,a,a,a,j,0,0,0,0,a,f
-a,f,f,0,x,0,0,0,0,0,0,0,0,0,a,f
-a,p,f,0,0,0,0,0,0,0,0,0,0,0,a,f
-a,f,f,0,0,0,0,0,0,0,0,0,0,0,a,f
-a,f,f,f,f,f,f,f,f,f,f,f,f,f,a,f
-a,f,f,p,f,f,p,f,f,p,f,f,f,f,a,f
-ITM 2 12,11
-ITM 3 12,5
-ITM 3 12,7
-ITM 2 4,2
-ITM 2 8,2
-ITM 1 12,2
-ITM 1 6,2
-ITM 0 10,2
-ITM 0 0,8
-ITM 1 6,7
-ITM 1 12,9
-ITM 0 4,13
-ITM 0 10,13
-ITM 1 8,13
-ITM 2 6,13
-ITM 2 12,13
-EXT 13,2 0 2,12
-PAL 1
-
-ROOM 7
-b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-b,b,b,b,b,b,0,b,b,0,0,0,0,0,b,0
-0,0,0,0,0,0,0,0,b,0,0,0,0,0,b,0
-b,0,0,0,0,0,0,0,b,0,0,0,0,0,0,0
-0,0,0,b,0,0,0,0,b,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,b,0,0,0,0,0,b,0
-b,b,b,b,b,b,0,b,b,0,0,0,0,0,b,0
-b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-b,0,0,0,0,0,0,0,0,0,0,0,0,0,b,0
-PAL 1
-
-ROOM 8
-c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-c,c,c,c,c,c,c,c,c,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,c,0,0,0,0,0,0,0
-c,0,0,0,0,0,0,0,c,c,c,c,0,0,0,0
-0,0,0,c,0,0,0,0,c,0,0,c,0,0,0,0
-0,0,0,0,0,0,0,0,c,0,0,c,0,0,0,0
-c,c,c,c,c,c,c,c,c,0,0,c,c,c,c,0
-c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-c,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-PAL 1
+PAL 0
 
 TIL a
-01010101
-10101010
-01010101
-10101010
-01010101
-10101010
-01010101
-11111111
-NAME floor-1-shadow
-WAL true
-COL 4
+10111010
+11100101
+11000010
+10000001
+01000010
+00100100
+00011000
+00010000
 
 TIL b
-01010101
-10101010
-01010101
-10101010
-01010101
-10101010
-01010101
-10101010
-NAME floor-2
-WAL true
-COL 5
+10010000
+10010000
+10010000
+10010010
+10010000
+10011000
+10110010
+11010101
 
 TIL c
-01010101
-10101010
-01010101
-10101010
-01010101
-10101010
-01010101
-10101010
-WAL true
-COL 6
+10111000
+11100100
+11000010
+10000001
+00000001
+00000010
+00000101
+00001010
 
 TIL d
+11011010
+10100101
+11000010
 10000001
-01000010
-00111100
-00100100
-00100100
-00111100
-01000010
-10000001
-WAL true
+11000010
+10100100
+10011000
+10010000
 
 TIL e
-00000000
-00000000
-00000000
-00000010
-00000001
-00001010
-00000101
-00101010
-COL 3
+00001101
+00000111
+00000011
+10000001
+11000010
+10100100
+10011000
+10010000
 
 TIL f
-01010101
-10100010
-01010101
-10101010
-01010101
-10101010
-01010100
-10101010
-COL 3
+00000000
+00000000
+00000000
+10000001
+11000010
+10100100
+10011000
+10010000
 
 TIL g
+00000100
+00000010
+00000001
 00000000
 00000000
 00000000
 00000000
-01000000
-10000000
-01010000
-10100000
-COL 3
+00000000
 
 TIL h
 00000000
 00000000
 00000000
 10000000
-00000000
-10000000
-00000000
-00000000
-COL 3
+01000000
+00100000
+00010000
+00001000
 
 TIL i
 00000000
 00000000
 00000000
-00000000
-00000000
-00000000
-00010000
-00101000
-COL 3
+10000001
+01000010
+00100101
+00011010
+00010101
 
 TIL j
-01010000
-10101000
-01000000
-10100000
-00000000
+10010000
+10010000
+10010000
+10010000
+10010000
+10010000
+10010000
+10010000
+
+TIL k
 10000000
-00000000
-00000000
-COL 3
+10000000
+10000000
+10000000
+01000000
+00100000
+00010000
+00001000
 
 TIL l
-00000000
-00100010
-01010101
-00101010
-01010101
-00101010
-00010100
-00001000
->
-00000000
-01000100
-10101010
-01010100
-10101010
-01010100
-00101000
-00010000
-NAME door
+10000000
+10000000
+10000000
+10000000
+10000000
+10000000
+10000000
+10000000
 
 TIL m
-01010101
-10101010
-01011101
-00100110
-00010101
-00001010
-00000101
-00000010
-COL 3
+00000000
+00000000
+00000000
+10000000
+11000000
+10100000
+10010000
+10001000
 
 TIL n
-01010100
-00100000
-00000000
-00000000
-00000000
-00000000
-00000000
-00000000
-COL 3
+10000100
+10000010
+10000001
+10000000
+10000000
+10000000
+10000000
+10000000
 
 TIL o
-01010101
-10100010
-01000001
-10000000
-01000001
-10100010
-01010101
-11101010
-COL 3
+00010000
+00010000
+00010000
+00010000
+00010000
+00010000
+00010000
+00010000
 
 TIL p
-01010001
-10101000
-01000000
-10100000
-00000000
-10000010
-00000001
-00001010
-COL 3
-
-TIL q
-01010101
-10101010
-11010101
-11101010
-11110101
-11111010
-11111101
-11111110
-NAME a-shadow
-WAL true
-COL 4
-
-TIL r
-01010101
-10101010
-01011101
-00101010
 00010101
-00001010
-00000101
-00000010
-COL 3
-
-TIL s
-00000000
-00000000
-00000000
-00000010
-00000101
-00000000
-00000101
-00000010
-COL 3
-
-TIL t
-01010101
-10101010
-11010101
-11101010
-11110101
-11111010
-11111101
-11111110
-NAME b-shadow
-WAL true
-COL 5
-
-TIL u
-11111111
-01111111
-10111111
-01011111
-10101111
-01010111
-10101011
-01010101
-NAME a-shadow-2
-WAL true
-COL 4
-
-TIL v
-01010101
-10101010
-01010101
-10101010
-01010101
-10101010
-01010101
-10101010
-NAME floor-1-plain
-WAL true
-COL 4
-
-TIL w
-00010101
-00101010
-00000101
-00001010
-00000001
-00000000
-00000000
-00000000
-COL 3
-
-TIL x
-00000000
-00000000
-00000000
-00110000
+00011010
 00010000
-00110100
-00111010
-00000000
-COL 3
+00010000
+00010000
+00010000
+00010000
+00010000
 
 SPR A
-00111100
-01111110
-01110111
-11111111
-11111100
-11111000
-00110000
-00101000
->
-00011100
-01111110
-01110111
-11111110
-11111111
-11111000
-00110000
-00101000
->
+00011000
+00010000
 00011000
 00111100
-01111111
-11110110
-11111100
-11111111
 01111110
-01001000
->
-00011100
-01111110
-01111111
-11110110
-11111111
-11111100
-01110000
-01001000
-POS 0 2,12
-
-SPR a
-00000000
-00000000
-01010001
-01110001
-01110010
-01111100
 00111100
-00100100
-DLG SPR_0
+00000000
+00000000
+POS 0 3,2
 
 ITM 0
 00000000
-01110000
-10101000
-11111000
-11111000
-10001000
-01111010
-00010101
->
 00000000
 00000000
+00111100
+01100100
+00100100
+00011000
 00000000
-01111000
-10101000
-11111100
-10001110
-01111101
->
-00000000
-00000000
-00000000
-01111000
-10101000
-11111100
-10001110
-01111101
-NAME collect
-COL 3
+NAME tea
+DLG ITM_0
 
-ITM 1
-00000000
-00000000
-00000000
-01111000
-10101000
-11111100
-10001110
-01111101
->
-00000000
-00000000
-00000000
-01111000
-10101000
-11111100
-10001110
-01111101
->
-00000000
-01110000
-10101000
-11111000
-11111000
-10001000
-01111010
-00010101
-NAME collect2
-COL 3
+DLG SPR_0
+I'm a cat
 
-ITM 2
-00000000
-00000000
-00000000
-01111000
-10101000
-11111100
-10001110
-01111101
->
-00000000
-01110000
-10101000
-11111000
-11111000
-10001000
-01111010
-00010101
->
-00000000
-00000000
-00000000
-01111000
-10101000
-11111100
-10001110
-01111101
-NAME collect3
-COL 3
+DLG ITM_0
+You found a nice warm cup of tea
 
-ITM 3
-01010101
-01110010
-10101101
-11111010
-11111101
-10001010
-01111010
-01010101
->
-01010101
-10100010
-01010101
-01111010
-10101101
-11111010
-10001110
-01111101
-NAME collect-shadow
-COL 3
+VAR a
+42
+
+	
 
 </script>
 
@@ -7188,7 +6733,128 @@ var scriptUtils = scriptModule.CreateUtils(); // TODO: move to editor.js?
 </script>
 
 <script src="js/app.js"></script>
+<script>
+	/**
+🏁
+@file transparent sprites
+@summary makes all sprites have transparent backgrounds
+@license MIT
+@version 1.0.0
+@author Sean S. LeBlanc
 
+@description
+Makes all sprites have transparent backgrounds.
+i.e. tiles can be seen underneath the player, sprites, and items.
+
+HOW TO USE:
+Copy-paste this script into a script tag after the bitsy source
+*/
+(function (bitsy) {
+'use strict';
+var hackOptions = {
+	// if true, overrides scaling behaviour to reduce the setup time + memory use,
+	// but the game will be blurry unless you've added pixelated image CSS
+	scaling: false
+};
+
+bitsy = bitsy && bitsy.hasOwnProperty('default') ? bitsy['default'] : bitsy;
+
+
+
+
+
+// override imageDataFromImageSource to use transparency for background pixels
+// and save the results to a custom image cache
+var _imageDataFromImageSource = bitsy.imageDataFromImageSource;
+bitsy.imageDataFromImageSource = function (imageSource, pal) {
+	var cache;
+	return function (args) {
+		if (cache) {
+			return cache;
+		}
+
+		// get the bitsy image data
+		var img = _imageDataFromImageSource.apply(undefined, args);
+
+		// make background pixels transparent
+		var bg = bitsy.getPal(pal)[0];
+		var i;
+		// discard unnecessary pixels
+		if (hackOptions.scaling) {
+			var scaledImg = bitsy.ctx.createImageData(img.width / bitsy.scale, img.height / bitsy.scale);
+			for (var y = 0; y < scaledImg.height; ++y) {
+				for (var x = 0; x < scaledImg.width; ++x) {
+					var idx = (y * scaledImg.width + x) * 4;
+					var idx2 = (y * bitsy.scale * img.width + x * bitsy.scale) * 4;
+					scaledImg.data[idx + 0] = img.data[idx2 + 0];
+					scaledImg.data[idx + 1] = img.data[idx2 + 1];
+					scaledImg.data[idx + 2] = img.data[idx2 + 2];
+					scaledImg.data[idx + 3] = img.data[idx2 + 3];
+				}
+			}
+			img = scaledImg;
+		}
+
+		// set background pixels to transparent
+		for (i = 0; i < img.data.length; i += 4) {
+			if (
+				img.data[i + 0] === bg[0] &&
+				img.data[i + 1] === bg[1] &&
+				img.data[i + 2] === bg[2]
+			) {
+				img.data[i + 3] = 0;
+			}
+		}
+
+		// give ourselves a little canvas + context to work with
+		var spriteCanvas = document.createElement("canvas");
+		spriteCanvas.width = bitsy.tilesize * (hackOptions.scaling ? 1 : bitsy.scale);
+		spriteCanvas.height = bitsy.tilesize * (hackOptions.scaling ? 1 : bitsy.scale);
+		var spriteContext = spriteCanvas.getContext("2d");
+
+		// put bitsy data to our canvas
+		spriteContext.clearRect(0, 0, bitsy.tilesize, bitsy.tilesize);
+		if (hackOptions.scaling) {
+			spriteContext.putImageData(img, 0, 0, 0, 0, bitsy.tilesize, bitsy.tilesize);
+		} else {
+			spriteContext.putImageData(img, 0, 0);
+		}
+
+		// save it in our cache
+		cache = spriteCanvas;
+
+		// return our image	
+		return cache;
+	}.bind(undefined, arguments)
+};
+
+// override drawTile to draw from our custom image cache
+// instead of putting image data directly
+bitsy.drawTile = function (img, x, y, context) {
+	if (!context) { //optional pass in context; otherwise, use default
+		context = bitsy.ctx;
+	}
+
+	if (hackOptions.scaling) {
+		context.drawImage(
+			img(),
+			x * bitsy.tilesize * bitsy.scale,
+			y * bitsy.tilesize * bitsy.scale,
+			bitsy.tilesize * bitsy.scale,
+			bitsy.tilesize * bitsy.scale
+		);
+	} else {
+		context.drawImage(
+			img(),
+			x * bitsy.tilesize * bitsy.scale,
+			y * bitsy.tilesize * bitsy.scale
+		);
+	}
+};
+
+}(window));
+
+</script>
 </head>
 
 
